objects/nFORCE__Route_Tile__c.object
<CustomObject>
    <description>A junction object used to map UI Routes and Tiles.</description>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>You can display tiles on a per-Institution basis. Use this lookup field to select a specific Institution where this tile displays. If blank, the tile appears on every instance of this route, regardless of Institution.</description>
        <inlineHelpText>Select a specific Institution where this tile displays. If blank, the tile appears on every instance of this route, regardless of Institution.</inlineHelpText>
        <label>Institution</label>
        <referenceTo>LLC_BI__Institution__c</referenceTo>
        <relationshipLabel>Route Tiles</relationshipLabel>
        <relationshipName>Route_Tiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tile_Name__c</fullName>
        <formula>nFORCE__Tile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>Prioritize the order of the tile on a route.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Route on which to display this Tile.</description>
        <label>Route</label>
        <referenceTo>nFORCE__Route__c</referenceTo>
        <relationshipLabel>Route Tiles</relationshipLabel>
        <relationshipName>Route_Tiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Tile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tile to display on this Route.</description>
        <label>Tile</label>
        <referenceTo>nFORCE__Tile__c</referenceTo>
        <relationshipLabel>Route Tiles</relationshipLabel>
        <relationshipName>Route_Tiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Route Tile</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Tile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>